# networth

./: .gitignore  LICENSE  README.md  bootstrap.sh
backend/: README.md  main.py  models.py  pyproject.toml  requirements.txt
backend/src/networth/: main.py
backend/src/networth/api/: job.py
backend/src/networth/finance/: taxes.py
backend/src/networth/models/: base.py  compensation_package.py  currency.py  income.py  income_source.py  job.py  scenario.py  taxes.py
backend/tests/finances/: test_taxes.py
backend/tests/models/: test_compensation_package.py  test_currency.py  test_income.py  test_income_sources.py  test_job.py  test_taxes.py
backend/tests/test_util/: factories.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  mainfest.json
frontend/src/: App.tsx  index.js  types.ts
frontend/src/api/: job.ts
frontend/src/components/: ThemeSwitch.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/types/: job.ts
typings/networth/: __init__.pyi  base.pyi  currency.pyi  income_source.pyi  job.pyi
