[tool.poetry]
name = "networth"
version = "0.1.0"
description = "Fun project for networth calculation and scenario modeling"
authors = ["Ned Rockson <nedrocks@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.2"
ksuid = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
